@@ -134,6 +134,8 @@ IDLE
 Tests
 -----
 
+- Backported tests for Tkinter variables.
+
 - Issue #19320: test_tcl no longer fails when wantobjects is false.
 
 - Issue #19683: Removed empty tests from test_minidom.  Initial patch by
